fixed spacing in sponsors section

--- a/src/components/HeroPage/Sponsors.css
+++ b/src/components/HeroPage/Sponsors.css
@@ -34,19 +34,19 @@
 .temp .sp-elem {
     justify-content: center;
     margin: 0 5%;
-    height: 170px;
+    height: 180px;
 }
 
 .small-temp .sp-elem {
     justify-content: center;
     margin: 0 6.5%;
-    height: 140px;
+    height: 160px;
 }
 
 .xsmall-temp .sp-elem {
     justify-content: center;
     margin: 0 8%;
-    height: 110px;
+    height: 150px;
 }
 
 .sp-space {
